# tkestack-vcuda-controller

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  a.txt  build-img.sh  build.sh  clean.py  find_new_lib.sh  main.c  read.md  run.sh  vcuda.spec
.chglog/: CHANGELOG.tpl.md
4vgpu/: Dockerfile
example/: build.sh  t1.cu
include/: all.h  auto-cuda-helper.h  auto-nvml-helper.h  base.h  cuda-helper.h  cuda-subset.h  cuda.h  func.h  hijack-info.h  nvml-helper.h  nvml-subset.h  nvml.h  vdpau.h
include/json/: cJSON.c  cJSON.h
include/vdpau/: vdpau.h
src/: auto_cuda_originals.c  auto_nvml_entry.c  base.c  cuda_hook.c  cuda_originals.c  func_strs.c  hijack_call.c  libvgpu.c  loader.c  nvml_hook.c  nvml_originals.c  register.c  utils.c  var.c  var.h
src/allocator/: allocator.c
src/cuda/: context.c  device.c  event.c  export_table.c  graph.c  hook.c  loader.c  memory.c  originals.c  utils.c
src/multiprocess/: multiprocess_memory_limit.c  multiprocess_utilization_watcher.c
src/nvml/: hook.c  nvml_entry.c  originals.c  util.c
tmpl/: cuda.h  cuda_generate.py  nvml.h  nvml_generate.py
tools/: cifar10_train.py  code_generate.py  code_generate.sh  cuda.txt  cuda_append.h  cuda_append.txt  demo.py  go.mod  go.sum  monitor_dockernized.c  nvml.txt  nvml_append.h  nvml_append.txt  pod.yaml  process.go  vcuda.config  vcuda.go
xxx/: Dockerfile
